--- a/src/components/styles/GradientBox.module.scss
+++ b/src/components/styles/GradientBox.module.scss
@@ -1,5 +1,5 @@
-@use "../../styles//mixins" as m;
-@use "../../styles/variables" as *;
+@use '../../styles//mixins' as m;
+@use '../../styles/variables' as *;
 
 .gradientBox {
   position: relative;
