--- a/src/components/styles/Loading.module.scss
+++ b/src/components/styles/Loading.module.scss
@@ -8,11 +8,10 @@
   align-items: center;
   justify-content: center;
   gap: 4.55vw;
-  aspect-ratio: 1920 / 1080;
-  background: url("../../assets/images/loading-background.svg") center/contain
-    no-repeat;
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background: url("../../assets/images/loading-background.svg") top center /
+    cover no-repeat;
   background-position: top center;
   width: 100%;
 }
