--- a/src/pages/styles/DocumentPage.module.scss
+++ b/src/pages/styles/DocumentPage.module.scss
@@ -4,10 +4,10 @@
 .documentPageWrapper {
   display: flex;
   gap: 5.73vw;
-  background: url("../../assets/images/document-background.svg") center/contain
-    no-repeat;
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background: url("../../assets/images/document-background.svg") top center /
+    cover no-repeat;
   background-position: top center;
 }
 
