🎨 : assets/images 폴더 정리

--- a/src/pages/styles/MainPage.module.scss
+++ b/src/pages/styles/MainPage.module.scss
@@ -7,8 +7,8 @@
   padding-left: 7.81vw;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/main-background.png") top center / cover
-    no-repeat;
+  background: url("../../assets/images/background/main-background.svg") top
+    center / cover no-repeat;
   background-position: top center;
   background-position: top center;
 
