--- a/src/pages/styles/NotFoundPage.module.scss
+++ b/src/pages/styles/NotFoundPage.module.scss
@@ -4,8 +4,8 @@
   left: 0vw;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/error-background.svg") top center / cover
-    no-repeat;
+  background: url("../../assets/images/background/error-background.svg") top
+    center / cover no-repeat;
   background-position: top center;
 }
 
