--- a/src/components/styles/Loading.module.scss
+++ b/src/components/styles/Loading.module.scss
@@ -10,8 +10,8 @@
   gap: 4.55vw;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/loading-background.svg") top center /
-    cover no-repeat;
+  background: url("../../assets/images/background/loading-background.svg") top
+    center / cover no-repeat;
   background-position: top center;
   width: 100%;
 }
