--- a/src/pages/styles/BusinessPage.module.scss
+++ b/src/pages/styles/BusinessPage.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/map-background.png") top center / cover
-    no-repeat;
+  background: url("../../assets/images/background/map-background.svg") top
+    center / cover no-repeat;
   .backButton {
     width: 2.81vw;
     height: 1.72vw;
