--- a/src/pages/styles/BusinessResultPage.module.scss
+++ b/src/pages/styles/BusinessResultPage.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: column;
   aspect-ratio: 1920 / 3628;
-  background: url("../../assets/images/result-background.png") center/contain
-    no-repeat;
+  background: url("../../assets/images/background/result-background.svg")
+    center/contain no-repeat;
   background-position: top center;
   width: 100%;
 
