--- a/src/pages/styles/DocumentPage.module.scss
+++ b/src/pages/styles/DocumentPage.module.scss
@@ -6,8 +6,8 @@
   gap: 5.73vw;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/document-background.svg") top center /
-    cover no-repeat;
+  background: url("../../assets/images/background/document-background.svg") top
+    center / cover no-repeat;
   background-position: top center;
 }
 
