--- a/src/pages/styles/FormPage.module.scss
+++ b/src/pages/styles/FormPage.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url("../../assets/images/analyze-background.svg") top center /
-    cover no-repeat;
+  background: url("../../assets/images/background/main-background.svg") top
+    center / cover no-repeat;
   background-position: top center;
 
   position: relative;
