--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -4,8 +4,8 @@
 .reportPageWrapper {
   @include m.flex-row-double-center;
   aspect-ratio: 1920 / 2419;
-  background: url("../../assets/images/report-background.png") center/contain
-    no-repeat;
+  background: url("../../assets/images/background/report-background.png")
+    center/contain no-repeat;
   background-position: top center;
   width: 100%;
 
@@ -197,25 +197,25 @@
       }
 
       .s {
-        background-image: url("../../assets/images/swot-s.png");
+        background-image: url("../../assets/images/report/swot-s.png");
         padding-left: 5.6vw;
         padding-top: 4vw;
         animation-delay: 0ms;
       }
       .w {
-        background-image: url("../../assets/images/swot-w.png");
+        background-image: url("../../assets/images/report/swot-w.png");
         padding-right: 5.6vw;
         padding-top: 4vw;
         animation-delay: 240ms;
       }
       .o {
-        background-image: url("../../assets/images/swot-o.png");
+        background-image: url("../../assets/images/report/swot-o.png");
         padding-left: 5.6vw;
         padding-top: 1.5vw;
         animation-delay: 120ms;
       }
       .t {
-        background-image: url("../../assets/images/swot-t.png");
+        background-image: url("../../assets/images/report/swot-t.png");
         padding-right: 5.6vw;
         padding-top: 1.5vw;
         animation-delay: 360ms;
