--- a/src/components/styles/MailModal.module.scss
+++ b/src/components/styles/MailModal.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixins' as m;
-@use '../../styles/variables' as *;
+@use "../../styles/mixins" as m;
+@use "../../styles/variables" as *;
 
 .modalOverlay {
   position: fixed;
@@ -7,7 +7,7 @@
   display: grid;
   place-items: center;
   background: transparent;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(0.21vw);
   z-index: 20000;
 }
 
@@ -87,8 +87,8 @@
   text-align: center;
   grid-template-columns: 1fr;
   grid-template-areas:
-    'image'
-    'buttons';
+    "image"
+    "buttons";
 }
 
 .okRow {
