--- a/src/components/styles/EmailPwBox.module.scss
+++ b/src/components/styles/EmailPwBox.module.scss
@@ -44,6 +44,8 @@
   box-shadow: inset 0.16vw 0.16vw 0.16vw -0.1vw $color-white,
     inset -0.16vw -0.16vw 0.16vw -0.1vw $color-white,
     0vw 0.42vw 0.63vw rgba(4, 0, 250, 0.06);
+  font-size: 0.83vw;
+  font-weight: 500;
 
   &::placeholder {
     font-size: 0.83vw;
