--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -213,15 +213,17 @@
   h1,
   h2,
   h3 {
-    margin: 1em 0 0.5em;
+    margin: 1.2vw 0;
   }
+
   p {
-    margin: 0.75em 0;
+    margin: 0.9vw 0;
   }
+
   ul,
   ol {
-    margin: 0.75em 0;
-    padding-left: 1.25rem;
+    margin: 0.9vw 0;
+    padding-left: 1.5vw;
   }
 }
 
