--- a/src/components/styles/BasicButton.module.scss
+++ b/src/components/styles/BasicButton.module.scss
@@ -12,7 +12,7 @@
   cursor: pointer;
   padding: 0;
 
-  &:active {
+  &:not(:disabled):active {
     background-color: $main-color1;
     border: none;
     color: $color-white;
@@ -24,4 +24,12 @@
   background: $main-color1;
   color: #fff;
   border-color: $main-color1;
+}
+.disabled,
+.button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none;
+  transform: none;
+  box-shadow: none;
 }
