--- a/src/pages/styles/FormPage.module.scss
+++ b/src/pages/styles/FormPage.module.scss
@@ -9,23 +9,14 @@
     center / cover no-repeat;
   background-position: top center;
 
-  position: relative;
   justify-content: center;
   align-items: flex-start;
-  overflow: hidden;
-}
+  overflow-x: hidden;
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 56.25vw;
+  @include m.flex-row-double-center;
 }
 
 .formBox {
-  position: relative;
-  margin-top: 8.85vw;
   background: #fff;
   border-radius: 1.04vw;
   width: 38.54vw;
@@ -33,12 +24,13 @@
   box-shadow: 0 0.21vw 1.04vw rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .logo {
   position: absolute;
-  top: 1.77vw;
-  left: 14.32vw;
+  top: 12%;
+  left: 45%;
   width: 10.05vw;
   height: 2.03vw;
 }
