--- a/src/pages/formPage/components/BaseResource.module.scss
+++ b/src/pages/formPage/components/BaseResource.module.scss
@@ -27,11 +27,9 @@
   gap: 0.31vw;
 }
 
-/* 자원 카드 그리드: 두 줄(위/아래)로 분리 */
 .resourceGrid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  column-gap: 2vw;
   row-gap: 2vw;
   align-items: stretch;
 }
@@ -60,6 +58,7 @@
 .resourceTitle {
   font-size: 1.04vw;
   font-weight: bold;
+  text-align: center;
 }
 
 .resourceDesc {
