--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,7 @@
 body {
   font-family: Pretendard, "Arial", Helvetica, sans-serif;
   background-color: $background-color;
+  overflow-x: hidden;
 }
 
 html,
