--- a/src/pages/documentPage/components/Document.module.scss
+++ b/src/pages/documentPage/components/Document.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles//mixins" as m;
-@use "../../../styles/variables" as *;
+@use '../../../styles//mixins' as m;
+@use '../../../styles/variables' as *;
 
 // RevisingBox
 .titleBox {
