--- a/src/pages/businessPage/components/Business.module.scss
+++ b/src/pages/businessPage/components/Business.module.scss
@@ -54,3 +54,30 @@
     color: $color-white;
   }
 }
+
+// 페이지 네비게이션
+.pagination {
+  display: flex;
+  gap: 0.31vw;
+  margin-bottom: 1.04vw;
+
+  button {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+
+    font-size: 1.04vw;
+    font-weight: 500;
+    color: $gray-400;
+
+    &:disabled {
+      opacity: 0.3;
+      cursor: default;
+    }
+  }
+
+  [aria-current="page"] {
+    color: $color-black;
+    text-decoration: underline;
+  }
+}
