--- a/src/pages/documentPage/components/Document.module.scss
+++ b/src/pages/documentPage/components/Document.module.scss
@@ -1,5 +1,5 @@
-@use '../../../styles//mixins' as m;
-@use '../../../styles/variables' as *;
+@use "../../../styles//mixins" as m;
+@use "../../../styles/variables" as *;
 
 // RevisingBox
 .titleBox {
@@ -90,6 +90,7 @@
   font-size: 0.83vw;
   font-weight: 500;
   color: $color-black;
+  line-height: 1.4;
 
   &::placeholder {
     color: $gray-400;
