💄 : pdf 버튼 절대배치, css 깨진것 수정

--- a/src/pages/documentPage/components/Document.module.scss
+++ b/src/pages/documentPage/components/Document.module.scss
@@ -180,3 +180,18 @@
     border-bottom: 0.1vw solid $gray-400;
   }
 }
+
+// DocumentItem
+.documentItemContainer {
+  display: flex;
+  gap: 1.04vw;
+  align-items: flex-end;
+  position: relative;
+
+  .pdfButton {
+    position: absolute;
+    top: 4%;
+    right: 20%;
+    z-index: 300;
+  }
+}
