💄 : swot, 다이어그램 애니메이션 지연시간 설정

--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -129,7 +129,7 @@
           object-fit: contain;
           display: block;
           clip-path: inset(0 100% 0 0);
-          animation: liner 2s ease-out forwards;
+          animation: liner 2s ease-out 6s forwards;
         }
       }
 
