--- a/src/pages/styles/MainPage.module.scss
+++ b/src/pages/styles/MainPage.module.scss
@@ -7,10 +7,9 @@
   position: relative;
   padding-left: 7.81vw;
   width: 100%;
-  height: 100vh;
+  aspect-ratio: 1920 / 1080;
   background: url("../../assets/images/background/main-background.svg") top
-    center / cover no-repeat;
-  background-position: top center;
+    center / contain no-repeat;
   background-position: top center;
 
   // .titleContainer {
@@ -46,5 +45,87 @@
     justify-content: space-between;
     align-items: center;
     width: 62.97vw;
+  }
+}
+
+// 스크롤 부분
+.scrollSection {
+  @include m.flex-column-center;
+  gap: 0.99vw;
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1920 / 4047;
+  background: url("../../assets/images/background/main-background2.png") top
+    center / contain no-repeat;
+  background-position: top center;
+  padding-bottom: 42.71vw; // footer 들어갈 자리
+
+  .logoBox1 {
+    @include m.flex-column-center;
+    gap: 0.99vw;
+
+    p {
+      font-size: 1.25vw;
+      font-weight: 500;
+      color: white;
+      white-space: pre-line;
+      text-align: center;
+      line-height: 1.4;
+    }
+  }
+  .logoBox2 {
+    @include m.flex-column-center;
+    align-items: flex-start;
+    gap: 0.99vw;
+
+    p {
+      font-size: 1.25vw;
+      font-weight: 500;
+      color: $gray-500;
+      white-space: pre-line;
+      text-align: start;
+      line-height: 1.4;
+    }
+  }
+
+  .section1 {
+    display: flex;
+    width: 76.61vw;
+    gap: 13.54vw;
+    margin-top: 2.71vw;
+  }
+
+  .section2 {
+    display: flex;
+    width: 76.61vw;
+    gap: 10.83vw;
+    margin-bottom: 2.24vw;
+
+    .imgTwo {
+      @include m.flex-column-center;
+      gap: 0.94vw;
+    }
+  }
+
+  .section3 {
+    position: relative;
+    display: flex;
+    width: 76.61vw;
+    gap: 4.11vw;
+    z-index: 1;
+  }
+
+  .characterBox {
+    position: relative;
+    z-index: 3;
+    margin-bottom: -1.3vw;
+    margin-right: 54vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8vw;
+    width: 100%;
   }
 }
