--- a/src/pages/styles/MainPage.module.scss
+++ b/src/pages/styles/MainPage.module.scss
@@ -103,6 +103,7 @@
 
     .imgTwo {
       @include m.flex-column-center;
+      justify-content: flex-start;
       gap: 0.94vw;
     }
   }
@@ -118,7 +119,7 @@
   .characterBox {
     position: relative;
     z-index: 3;
-    margin-bottom: -1.3vw;
+    margin-bottom: -2.6vw;
     margin-right: 54vw;
 
     display: flex;
