--- a/src/components/styles/WarningModal.module.scss
+++ b/src/components/styles/WarningModal.module.scss
@@ -7,7 +7,7 @@
   display: grid;
   place-items: center;
   background: transparent;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(0.06vw);
   z-index: 20000;
 }
 
@@ -34,7 +34,7 @@
 .message {
   margin-top: 1.56vw;
   font-size: 1.88vw;
-  font-weight: bold;
+  font-weight: 600;
   text-align: center;
   color: black;
   width: 46.09vw;
