--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,8 @@ $translucent: #ffffff80;
 $main-color1: #0400fa;
 $main-color2: #8ebefa;
 
+$gray-100: #e9e9e9;
+$gray-200: #d9d9d9;
 $gray-300: #c4c4c4;
 $gray-400: #9d9d9d;
 $gray-500: #767676;
