--- a/src/pages/mainPage/styles/Footer.module.scss
+++ b/src/pages/mainPage/styles/Footer.module.scss
@@ -18,8 +18,9 @@
     p {
       font-size: 1.25vw;
       font-weight: 600;
-      color: $gray-200;
+      color: #d9d9d980;
       white-space: pre-line;
+      line-height: 1.4;
     }
   }
 
