--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -128,8 +128,8 @@
           height: 100%;
           object-fit: contain;
           display: block;
-          clip-path: inset(0 100% 0 0);
-          animation: liner 2s ease-out 6s forwards;
+          //clip-path: inset(0 100% 0 0);
+          //animation: liner 2s ease-out 6s forwards;
         }
       }
 
@@ -227,8 +227,8 @@
   }
 }
 
-@keyframes liner {
-  to {
-    clip-path: inset(0 0 0 0);
-  }
-}
+// @keyframes liner {
+//   to {
+//     clip-path: inset(0 0 0 0);
+//   }
+// }
