💄 : 모든 버튼 hover 색상 적용

--- a/src/components/styles/BasicButton.module.scss
+++ b/src/components/styles/BasicButton.module.scss
@@ -18,6 +18,12 @@
     color: $color-white;
     transform: scale(0.95);
   }
+
+  &:hover {
+    background-color: $main-color1;
+    border: none;
+    color: $color-white;
+  }
 }
 
 .active {
