--- a/src/components/styles/StatusSelect.module.scss
+++ b/src/components/styles/StatusSelect.module.scss
@@ -1,3 +1,6 @@
+@use "../../styles/mixins" as m;
+@use "../../styles/variables" as *;
+
 /* 래퍼: 드롭다운 기준점 */
 .selectWrap {
   position: relative;
@@ -24,10 +27,15 @@
   border: 0.05vw solid #000;
   border-radius: 0.42vw;
   background: #fff;
-  color: #000;
+  color: $color-black;
   cursor: pointer;
   box-sizing: border-box;
   user-select: none;
+
+  &:hover {
+    background-color: $main-color1;
+    color: white;
+  }
 
   .triggerText {
     width: auto;
@@ -129,7 +137,7 @@
 }
 
 .boxOn::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0.18vw;
   top: 0.1vw;
