💄 : 메인페이지 간격 조정

--- a/src/pages/styles/MainPage.module.scss
+++ b/src/pages/styles/MainPage.module.scss
@@ -38,9 +38,9 @@
 
   .explanationBoxs {
     display: flex;
-    justify-content: space-between;
+    gap: 8.23vw;
     align-items: center;
-    width: 62.97vw;
+    width: 82%;
   }
 }
 
